--- a/Exercicios/exericio22_desafio04/style/style.css
+++ b/Exercicios/exericio22_desafio04/style/style.css
@@ -1,22 +1,36 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+
+ :root{
+    --font1: Verdana, Gemeva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+ } 
 *{
   margin: 0px;
   padding: 0px;
+  font-size: 1em;
 }
 
 html, body{
   min-height: 100vh;
   background-color: darkgrey;
+  font-family: var(--font1);
 }
 
 header{
   background-color: black;
   color: white;
   text-align: center;
+  font-family: var(--font2);
 }
 
 header > h1{
   padding-top: 50px;
   font-variant: small-caps;
+  font-family: var(--font2);
+  font-size: 10vh;
 }
 
 header > p{
@@ -34,9 +48,11 @@ header a:hover, footer a:hover {
 }
 section{
   padding-top: 10vh;
-  padding-bottom: 20vh;
+  padding-bottom: 10vh;
   padding-left: 30px;
   line-height: 32px;
+  font-family: var(--font3);
+  font-size: 3.5vh;
 }
 section.normal{
   background-color: white;
@@ -44,13 +60,16 @@ section.normal{
 }
 
 section.imagem{
+  background-image: url();
   background-color: rgb(34, 33, 33);
   color: white;
 }
 
 section.imagem > p {
+  display: inline-block;
+  padding: 5px;
   background-color: rgb(20, 20, 20);
-  width: 300px;
+
 }
 
 footer{
